--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  webview_windows: ^0.2.2
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +61,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/
+    - lib/assets/node_modules/
+    - lib/assets/node_modules/dwt/
+    - lib/assets/node_modules/dwt/dist/
+    - lib/assets/node_modules/dwt/dist/addon/
+    - lib/assets/node_modules/dwt/dist/dist/
+    - lib/assets/node_modules/dwt/dist/src/
+    - lib/assets/node_modules/dwt/dist/types/
+
+    # - packages/web_twain_desktop/assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
